# CMake

./: README.md
Demo04-自定义编译选项（option关键字的使用）/: README.md
Demo1-单个源代码/: README.md
Demo5-安装/: README.md
code-my/: hello.cmake  hello.txt  hello1.cmake  run.sh
code-my/include/: README.md  run.sh  test0.cmake  test1.cmake
code-my/macro_and_function/: run.sh  test1.cmake  test2.cmake  test3.cmake  test4.cmake  test5.cmake  test6.cmake  test7.cmake
code-my/predefine/: README.md  run.sh  test0.cmake
code-my/set/: README.md  test0.cmake
code-official/: .gitignore
code-official/chapter-01/recipe-04/cxx-example/: run.sh
code-official/chapter-01/recipe-10/cxx-example/: run.sh
code-official/chapter-04/recipe-01/cxx-example/: test.sh
code-official/chapter-07/recipe-01/cxx-example/: CMakeLists.txt
code-official/chapter-07/recipe-01/cxx-example/tests/: CMakeLists.txt
code/chapter-01/recipe-03/cxx-example/: run.sh
code/chapter-01/recipe-04/cxx-example/: CMakeLists.txt  run.sh
code/chapter-01/recipe-08/cxx-example/: clean.sh  compute-areas.cpp
code/chapter-04/recipe-01/cxx-example/: clean.sh  run.sh
code/chapter-07/recipe-01/cxx-example/: run.sh
notes/: CMake代码笔记.md  CMake笔记.md  chapter01-From a Simple Executable to Libraries.md  chapter01-设置系统.md  chapter02-From a Simple Executable to Libraries.md  chapter04-Creating and Running Tests.md  chapter04-检测环境.md  chapter05-Creating and Running Tests.md  chapter07-Structuring Projects.md  第1-2章-初识CMake和安装CMake.md  第3章-初试CMake-CMake的HelloWorld.md  第4章-更好一点的HelloWorld.md
references/: 未确认 313400.crdownload
(+1 files in other folders)
